# TransactFlow

./: .gitignore  README.md  notebook.ipynb  printTransactions.py  pyproject.toml  taxSimulation.ipynb  writeTimestamp.py
haskell_exp/: hie.yaml  transactflow.cabal
haskell_exp/src/TransactFlow/: Base.hs  ExternalProcess.hs  ExternalTransaction.hs  MultiCurrency.hs  Process.hs
haskell_exp/test/: Main.hs
proto/: transactflow.proto
scripts/: release.sh
src/transactflow/: analysis.py  analysisServer.py  base.py  capitalGainCalculation.py  colors.py  externalProcess.py  externalTransaction.py  multiCurrency.py  process.py  rates.py  serialization.py  taxSummary.py  usdJpy.py  userConfig.py
src/transactflow/audit/: checkAgainstGolden.py  helpers.py
src/transactflow/importers/: amazonGiftCard.py  amexJp.py  amexUs.py  diners.py  hsbcUs.py  importer.py  jcb.py  manualRecord.py  morganStanley.py  prestia.py  revolut.py  sbi.py  smbcCard.py
src/transactflow/processes/: capitalGain.py  complex.py  forecast.py  importer.py  payslipAnnotationItem.py  payslipIncome.py  runAll.py  sharedMatchings.py  simple.py  tax.py
src/transactflow/retrieval/: amex.py  amexJp.py  common.py  config.py  diners.py  prestia.py  runner.py  smbcCard.py  suica.py
src/transactflow/taxCalculation/: localTaxCalculation.py  nationalTaxCalculation.py
src/transactflow/templates/: index.html
src/transactflow/web/: app.css  app.ts  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  helpers.py  sanityCheck.py  testMatchingGolden.py  testMerging.py  testProcesses.py  test_base.py  test_external_transaction.py  test_importers.py  test_pipeline.py  test_process.py
tests/data/rawTransactions/: manual_records.csv
tests/data/rawTransactions/prestia/: combined.csv
tests/data/rawTransactions/revolut/: transactions.csv
tests/data/rawTransactions/sbi/: transactions.csv
tests/data/rawTransactions/smbc-card/: last_update_time
tests/data/rawTransactions/smbc-card/months/: 202501.csv  202502.csv
