[project]
name = "TransactFlow"
version = "0.2.0"
description = "A personal accounting system built around transactions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bqplot>=0.12.45",
    "flask>=3.1.3",
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "patchright>=1.58.2",
    "plotly>=6.6.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "termcolor>=3.3.0",
    "tqdm>=4.67.3",
    "tzlocal>=5.3.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
    "yfinance>=1.2.0",
    "protobuf>=5.29.0",
    "nodriver>=0.48.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "grpcio-tools>=1.70.0",
]
