cabal-version: 3.0
name:          transactflow
version:       0.1.0.0
synopsis:      Personal finance transaction processing and analysis
license:       NONE

common shared
  default-language: GHC2021
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    StrictData
  ghc-options: -Wall -Wno-name-shadowing

library
  import:          shared
  hs-source-dirs:  src, gen
  exposed-modules:
    TransactFlow.Base
    TransactFlow.Process
    TransactFlow.MultiCurrency
    TransactFlow.ExternalTransaction
    TransactFlow.ExternalProcess
    Proto.Transactflow
    Proto.Transactflow_Fields
  build-depends:
    base             >= 4.17 && < 5,
    bytestring       >= 0.11,
    containers       >= 0.6,
    lens-family       >= 2.1,
    proto-lens        >= 0.7,
    proto-lens-runtime >= 0.7,
    text             >= 2.0,
    time             >= 1.12,
    vector           >= 0.13

test-suite tests
  import:          shared
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  build-depends:
    base,
    bytestring,
    proto-lens,
    transactflow,
    containers,
    text,
    time
